// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Search renders disabled 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-iOnGvX btMRNz"
    disabled={true}
    placeholder=" "
    type="search"
    value="Text"
  >
    <label
      className="sc-gmSHEY coDCGe"
    >
      medium
    </label>
    <input
      className="sc-goMRkL JOvHL"
      disabled={true}
      placeholder=" "
      type="search"
      value="Text"
    />
    <p
      className="sc-VcoSR dKUTwy"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-iOnGvX btMRNz"
    disabled={true}
    placeholder=" "
    type="search"
    value="Text"
  >
    <label
      className="sc-gmSHEY coDCGe"
    >
      large
    </label>
    <input
      className="sc-goMRkL gsTWKg"
      disabled={true}
      placeholder=" "
      type="search"
      value="Text"
    />
    <p
      className="sc-VcoSR dKUTwy"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-iOnGvX btMRNz"
    disabled={true}
    placeholder=" "
    type="search"
    value="Text"
  >
    <div
      className="sc-jNrqiC jBcQib"
    >
      <input
        className="sc-goMRkL ubFMP"
        disabled={true}
        placeholder=" "
        type="search"
        value="Text"
      />
      <label
        className="sc-glUVip fKjLAb"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-VcoSR dKUTwy"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Search renders error 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-iOnGvX dtoFCR"
    placeholder="e.g. EPL"
    type="search"
  >
    <label
      className="sc-gmSHEY coDCGe"
    >
      medium
    </label>
    <input
      className="sc-goMRkL kDWyPF"
      placeholder="e.g. EPL"
      type="search"
    />
    <p
      className="sc-VcoSR jatpWO"
      role="alert"
    >
      Error message
    </p>
  </div>
  <div
    className="sc-iOnGvX dtoFCR"
    placeholder="e.g. EPL"
    type="search"
  >
    <label
      className="sc-gmSHEY coDCGe"
    >
      large
    </label>
    <input
      className="sc-goMRkL fWoZBG"
      placeholder="e.g. EPL"
      type="search"
    />
    <p
      className="sc-VcoSR jatpWO"
      role="alert"
    >
      Error message
    </p>
  </div>
  <div
    className="sc-iOnGvX dtoFCR"
    placeholder="e.g. EPL"
    type="search"
  >
    <div
      className="sc-jNrqiC jBcQib"
    >
      <input
        className="sc-goMRkL tiNjh"
        placeholder="e.g. EPL"
        type="search"
      />
      <label
        className="sc-glUVip fKjLAb"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-VcoSR jatpWO"
      role="alert"
    >
      Error message
    </p>
  </div>
</div>
`;

exports[`TextInput: type Search renders readOnly 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-iOnGvX dtoFCR"
    placeholder=" "
    readOnly={true}
    type="search"
    value="Read only text"
  >
    <label
      className="sc-gmSHEY coDCGe"
    >
      medium
    </label>
    <input
      className="sc-goMRkL JOvHL"
      placeholder=" "
      readOnly={true}
      type="search"
      value="Read only text"
    />
    <p
      className="sc-VcoSR dKUTwy"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-iOnGvX dtoFCR"
    placeholder=" "
    readOnly={true}
    type="search"
    value="Read only text"
  >
    <label
      className="sc-gmSHEY coDCGe"
    >
      large
    </label>
    <input
      className="sc-goMRkL gsTWKg"
      placeholder=" "
      readOnly={true}
      type="search"
      value="Read only text"
    />
    <p
      className="sc-VcoSR dKUTwy"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-iOnGvX dtoFCR"
    placeholder=" "
    readOnly={true}
    type="search"
    value="Read only text"
  >
    <div
      className="sc-jNrqiC jBcQib"
    >
      <input
        className="sc-goMRkL ubFMP"
        placeholder=" "
        readOnly={true}
        type="search"
        value="Read only text"
      />
      <label
        className="sc-glUVip fKjLAb"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-VcoSR dKUTwy"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Search renders with hint 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-iOnGvX dtoFCR"
    placeholder="e.g. EPL"
    type="search"
  >
    <label
      className="sc-gmSHEY coDCGe"
    >
      medium
    </label>
    <input
      className="sc-goMRkL JOvHL"
      placeholder="e.g. EPL"
      type="search"
    />
    <p
      className="sc-VcoSR dKUTwy"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-iOnGvX dtoFCR"
    placeholder="e.g. EPL"
    type="search"
  >
    <label
      className="sc-gmSHEY coDCGe"
    >
      large
    </label>
    <input
      className="sc-goMRkL gsTWKg"
      placeholder="e.g. EPL"
      type="search"
    />
    <p
      className="sc-VcoSR dKUTwy"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-iOnGvX dtoFCR"
    placeholder="e.g. EPL"
    type="search"
  >
    <div
      className="sc-jNrqiC jBcQib"
    >
      <input
        className="sc-goMRkL ubFMP"
        placeholder="e.g. EPL"
        type="search"
      />
      <label
        className="sc-glUVip fKjLAb"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-VcoSR dKUTwy"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Search renders with label 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-iOnGvX dtoFCR"
    placeholder="e.g. EPL"
    type="search"
  >
    <label
      className="sc-gmSHEY coDCGe"
    >
      medium
    </label>
    <input
      className="sc-goMRkL JOvHL"
      placeholder="e.g. EPL"
      type="search"
    />
  </div>
  <div
    className="sc-iOnGvX dtoFCR"
    placeholder="e.g. EPL"
    type="search"
  >
    <label
      className="sc-gmSHEY coDCGe"
    >
      large
    </label>
    <input
      className="sc-goMRkL gsTWKg"
      placeholder="e.g. EPL"
      type="search"
    />
  </div>
  <div
    className="sc-iOnGvX dtoFCR"
    placeholder="e.g. EPL"
    type="search"
  >
    <div
      className="sc-jNrqiC jBcQib"
    >
      <input
        className="sc-goMRkL ubFMP"
        placeholder="e.g. EPL"
        type="search"
      />
      <label
        className="sc-glUVip fKjLAb"
      >
        xlarge
      </label>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Search renders with label RTL 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-iOnGvX dtoFCR"
    dir="rtl"
    placeholder="e.g. EPL"
    type="search"
  >
    <label
      className="sc-gmSHEY coDCGe"
      dir="rtl"
    >
      medium
    </label>
    <input
      className="sc-goMRkL JOvHL"
      dir="rtl"
      placeholder="e.g. EPL"
      type="search"
    />
  </div>
  <div
    className="sc-iOnGvX dtoFCR"
    dir="rtl"
    placeholder="e.g. EPL"
    type="search"
  >
    <label
      className="sc-gmSHEY coDCGe"
      dir="rtl"
    >
      large
    </label>
    <input
      className="sc-goMRkL gsTWKg"
      dir="rtl"
      placeholder="e.g. EPL"
      type="search"
    />
  </div>
  <div
    className="sc-iOnGvX dtoFCR"
    dir="rtl"
    placeholder="e.g. EPL"
    type="search"
  >
    <div
      className="sc-jNrqiC jBcQib"
    >
      <input
        className="sc-goMRkL ubFMP"
        dir="rtl"
        placeholder="e.g. EPL"
        type="search"
      />
      <label
        className="sc-glUVip fQRjhM"
      >
        xlarge
      </label>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Search renders without label 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-iOnGvX dtoFCR"
    placeholder="medium"
    type="search"
  >
    <input
      className="sc-goMRkL JOvHL"
      placeholder="medium"
      type="search"
    />
  </div>
  <div
    className="sc-iOnGvX dtoFCR"
    placeholder="large"
    type="search"
  >
    <input
      className="sc-goMRkL gsTWKg"
      placeholder="large"
      type="search"
    />
  </div>
  <div
    className="sc-iOnGvX dtoFCR"
    placeholder="xlarge"
    type="search"
  >
    <div
      className="sc-jNrqiC jBcQib"
    >
      <input
        className="sc-goMRkL kGKhoa"
        placeholder="xlarge"
        type="search"
      />
      <label
        className="sc-glUVip fKjLAb"
      />
    </div>
  </div>
</div>
`;

exports[`TextInput: type Search supports background colour 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-iOnGvX dtoFCR"
    placeholder="e.g. EPL"
    type="search"
  >
    <label
      className="sc-gmSHEY coDCGe"
    >
      medium
    </label>
    <input
      className="sc-goMRkL hWBUEc"
      placeholder="e.g. EPL"
      type="search"
    />
    <p
      className="sc-VcoSR dKUTwy"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-iOnGvX dtoFCR"
    placeholder="e.g. EPL"
    type="search"
  >
    <label
      className="sc-gmSHEY coDCGe"
    >
      large
    </label>
    <input
      className="sc-goMRkL gTNnSf"
      placeholder="e.g. EPL"
      type="search"
    />
    <p
      className="sc-VcoSR dKUTwy"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-iOnGvX dtoFCR"
    placeholder="e.g. EPL"
    type="search"
  >
    <div
      className="sc-jNrqiC hjjcDo"
    >
      <input
        className="sc-goMRkL fBUiNw"
        placeholder="e.g. EPL"
        type="search"
      />
      <label
        className="sc-glUVip fKjLAb"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-VcoSR dKUTwy"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;
